<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/height_pagecontrol">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_signup_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginTop="@dimen/margin_normal"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_xxx_large"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bkg_white_round"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:padding="@dimen/margin_large"
                android:orientation="vertical"
                >
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_button"
                            android:background="@drawable/bkg_corner_gray"
                            android:layout_marginTop="@dimen/margin_normal">
                            <EditText
                                android:id="@+id/edt_email"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingLeft="@dimen/margin_normal"
                                android:hint="@string/sign_up_email"
                                android:textColorHint="@color/colorTextHint"
                                android:textSize="@dimen/text_normal"
                                android:textColor="@color/colorTextDarkGray"
                                android:background="@null"
                                android:imeOptions="actionDone"
                                android:singleLine="true"
                                android:inputType="textEmailAddress"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_button"
                            android:background="@drawable/bkg_corner_gray"
                            android:layout_marginTop="@dimen/margin_normal">
                            <EditText
                                android:id="@+id/edt_fullname"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingLeft="@dimen/margin_normal"
                                android:hint="@string/sign_up_full_name"
                                android:textColorHint="@color/colorTextHint"
                                android:textSize="@dimen/text_normal"
                                android:textColor="@color/colorTextDarkGray"
                                android:background="@null"
                                android:imeOptions="actionDone"
                                android:singleLine="true"
                                android:inputType="text"/>
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_button"
                            android:background="@drawable/bkg_corner_gray"
                            android:layout_marginTop="@dimen/margin_normal">
                            <EditText
                                android:id="@+id/edt_password"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingLeft="@dimen/margin_normal"
                                android:hint="@string/sign_up_password"
                                android:textColorHint="@color/colorTextHint"
                                android:textSize="@dimen/text_normal"
                                android:textColor="@color/colorTextDarkGray"
                                android:background="@null"
                                android:imeOptions="actionDone"
                                android:singleLine="true"
                                android:inputType="textPassword"/>

                            <ImageView
                                android:id="@+id/img_password_show_hide"
                                android:layout_width="@dimen/height_back"
                                android:layout_height="@dimen/height_back"
                                android:src="@drawable/password_show"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="@dimen/margin_very_small"
                                />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_button"
                            android:background="@drawable/bkg_corner_gray"
                            android:layout_marginTop="@dimen/margin_normal">
                            <EditText
                                android:id="@+id/edt_password_again"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingLeft="@dimen/margin_normal"
                                android:hint="@string/sign_up_password_again"
                                android:textColorHint="@color/colorTextHint"
                                android:textSize="@dimen/text_normal"
                                android:textColor="@color/colorTextDarkGray"
                                android:background="@null"
                                android:imeOptions="actionDone"
                                android:singleLine="true"
                                android:inputType="textPassword"/>

                            <ImageView
                                android:id="@+id/img_password_again_show_hide"
                                android:layout_width="@dimen/height_back"
                                android:layout_height="@dimen/height_back"
                                android:src="@drawable/password_show"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="@dimen/margin_very_small"
                                />
                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_button"
                            android:layout_marginTop="@dimen/margin_normal"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            >
                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sign_up_terms_privacy"
                                android:textColor="@color/colorTextDarkGray"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_button"
                            android:layout_marginTop="@dimen/margin_normal"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            >
                            <Button
                                android:id="@+id/btn_Register"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/height_button"
                                android:background="@drawable/bkg_button_blue"
                                android:text="@string/sign_up_register"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/text_normal"
                                android:textAllCaps="false"
                                />
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_pagecontrol"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="@dimen/margin_normal"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_control"
            android:textColor="@color/colorTextHint"
            android:textSize="@dimen/text_small"
            android:gravity="center"
            android:textColorLink="@color/colorGreen"/>
    </LinearLayout>
</RelativeLayout>